--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "dependencies": {
-    "@types/express": "^4.17.18",
-    "@types/node": "^20.8.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "prisma": "^5.3.1",
-    "tsx": "^3.13.0",
-    "typescript": "^5.2.2"
+    "zod": "^3.22.4"
   },
   "name": "porfolio-server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@prisma/client": "^5.4.1",
+    "@rocketseat/eslint-config": "^2.1.0",
+    "@types/express": "^4.17.18",
+    "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.51.0",
+    "prisma": "^5.3.1",
+    "tsx": "^3.13.0",
+    "typescript": "^5.2.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch ./src/server.ts"
+    "dev": "tsx watch ./src/server.ts",
+    "migration": "prisma migrate dev",
+    "generate": "prisma generate"
   },
   "keywords": [],
   "author": "",
